--- a/VideoSnake-Info.plist
+++ b/VideoSnake-Info.plist
@@ -36,6 +36,8 @@
 	<string>This app may store recorded video into your Photo Library</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app may access your Photo Library</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIPrerenderedIcon</key>
